// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sdk-metadata generates metadata content for services with pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Usage Example",
      "instructions": "import { DummyApi } from '@sap/dummy-package';

const responseData = await DummyApi.DummyFunction().execute({ destinationName:'myDestinationName' });",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "generationSteps": Object {
      "header": "Installation & Generation Steps",
      "instructions": "<ul>
<li>Install <a href=\\"https://docs.npmjs.com/downloading-and-installing-node-js-and-npm\\">Node and npm.</a>. The use of the LTS version is preferred.</li>
<li>Download the API specification from Overview -> API Specification section. Chose JSON format.</li>
<li>Generate a typed client by running <code>npm install -g @sap-cloud-sdk/openapi-generator</code> to install the code generator.</li>
<li>Execute the generator <code>openapi-generator --inputDir <inputDirectory> --outputDir <outputDirectory></code></li>
<li>You should now find generated classes in the output directory specified in step 4.</li>
<li>By default we generate TypeScript only. If you need to transpile it to JavaScript check the <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client#options>\\"code generator CLI parameters in the documentation.</a></li>
<li>In case of any issues, carefully check your configuration and refer to our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">extended typed client generation manual</a>.</li>
<li>Congratulations! Check the usage example below to import and invoke your typed OData client library.</li>
</ul>",
      "text": "You can generate a typed OData client for this service yourself. Follow the instructions below to install the tooling and complete the generation steps:",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/openapi-generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Usage Example",
      "instructions": "import { MyApi } from 'my-npm-package';

const responseData = await MyApi.myFunction().execute({ destinationName:'myDestinationName' });",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "links": Object {
      "generationManual": Object {
        "name": "OpenApi client generation manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/generate-openapi-client",
      },
      "gettingStarted": Object {
        "name": "Getting Started with SDK for JavaScript",
        "url": "https://sap.github.io/cloud-sdk/docs/js/getting-started",
      },
      "overviewDocumentation": Object {
        "name": "OpenApi consumption manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/execute-openapi-request",
      },
      "sdkDocumentation": Object {
        "name": "The SAP Cloud SDK documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Get support or give feedback",
        "url": "https://sap.github.io/cloud-sdk/docs/overview/get-support",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": Object {
    "compatibilityNotes": "",
    "dependencyName": "@sap/dummy-package",
    "description": "SAP Cloud SDK for JavaScript: Generated client for OpenAPI service @sap/dummy-package",
    "generatedAt": "/Date(0)/",
    "installLibrarySteps": Object {
      "header": "Installation",
      "instructions": "npm i @sap/dummy-package:latest",
      "text": "Add this typed client library as a dependency to your JavaScript project by running the npm command below in the root folder of your project. For more details take a look at our \\"Getting Started with SDK for JavaScript\\" guide in the \\"Helpful Links\\" menu.",
    },
    "repository": "npm",
    "repositoryLink": "https://www.npmjs.com/package/@sap/dummy-package",
    "version": "1.2.3",
  },
  "serviceStatus": Object {
    "status": "certified",
    "statusLongText": "You can download our pregenerated API client for this API.",
    "statusText": "API Client available for download",
  },
}
`;

exports[`sdk-metadata generates metadata content for services without pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": Object {
      "header": "Usage Example",
      "instructions": "import { DummyApi } from '@sap/dummy-package';

const responseData = await DummyApi.DummyFunction().execute({ destinationName:'myDestinationName' });",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "generationSteps": Object {
      "header": "Installation & Generation Steps",
      "instructions": "<ul>
<li>Install <a href=\\"https://docs.npmjs.com/downloading-and-installing-node-js-and-npm\\">Node and npm.</a>. The use of the LTS version is preferred.</li>
<li>Download the API specification from Overview -&gt; API Specification section. Chose JSON format.</li>
<li>Generate a typed client by running <code>npm install -g @sap-cloud-sdk/openapi-generator</code> to install the code generator.</li>
<li>Execute the generator <code>openapi-generator --inputDir <inputDirectory> --outputDir <outputDirectory></code></li>
<li>You should now find generated classes in the output directory specified in step 4.</li>
<li>By default we generate TypeScript only. If you need to transpile it to JavaScript, check the <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client#options\\">code generator CLI parameters in the documentation</a>.</li>
<li>In case of any issues carefully check your configuration and refer to our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">extended typed client generation manual.</a></li>
<li>Congratulations! Check the usage example below to import and invoke your typed OData client library.</li>
</ul>",
      "text": "You can generate a typed OData client for this service yourself. Follow the instructions below to install the tooling and complete the generation steps:",
    },
    "generatorRepositoryLink": "https://www.npmjs.com/package/@sap-cloud-sdk/openapi-generator",
    "generatorVersion": Any<String>,
    "genericUsage": Object {
      "header": "Usage Example",
      "instructions": "import { MyApi } from 'my-npm-package';

const responseData = await MyApi.myFunction().execute({ destinationName:'myDestinationName' });",
      "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
    },
    "links": Object {
      "generationManual": Object {
        "name": "OpenApi client generation manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/generate-openapi-client",
      },
      "gettingStarted": Object {
        "name": "Getting Started with SDK for JavaScript",
        "url": "https://sap.github.io/cloud-sdk/docs/js/getting-started",
      },
      "overviewDocumentation": Object {
        "name": "OpenApi consumption manual",
        "url": "https://sap.github.io/cloud-sdk/docs/js/features/openapi/execute-openapi-request",
      },
      "sdkDocumentation": Object {
        "name": "The SAP Cloud SDK documentation",
        "url": "https://sap.github.io/cloud-sdk/",
      },
      "support": Object {
        "name": "Get support or give feedback",
        "url": "https://sap.github.io/cloud-sdk/docs/overview/get-support",
      },
    },
    "repository": "npm",
  },
  "language": "JavaScript",
  "pregeneratedLibrary": undefined,
  "serviceStatus": Object {
    "status": "verified",
    "statusLongText": "The SAP Cloud SDK team checked for this API that generating a API client works, but no pregenerated client is available. You can generate your own client for this API.",
    "statusText": "API Client generation tested but no download available",
  },
}
`;
